--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>safeschool-ready-spark</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Suraksha</title>
+    <meta name="description" content="Digital Disaster Preparedness Platform for Educational Institutions" />
+    <meta name="author" content="Suraksha Team" />
 
-    <meta property="og:title" content="safeschool-ready-spark" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Suraksha" />
+    <meta property="og:description" content="Digital Disaster Preparedness Platform for Educational Institutions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
